[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/Enemy_kocbas.gd" type="Script" id=1]
[ext_resource path="res://Sprites/KocBasi/KocBasiWalk.png" type="Texture" id=2]
[ext_resource path="res://Sprites/KocBasi/KocBasiAttack.png" type="Texture" id=3]
[ext_resource path="res://SFX/kocbas_attack.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/kocbas_gerinme.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.8565, 5.81891 )

[sub_resource type="CircleShape2D" id=2]
radius = 21.776

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.62988
height = 1.80236

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.30859, 6.11497 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 44, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 88, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 220, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 308, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 396, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 440, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 484, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 528, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 572, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 616, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 660, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 88, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 132, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 44, 17 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 220, 0, 44, 17 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Attack",
"speed": 6.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
} ]

[node name="Enemy_kocbas" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 0
collision_mask = 131072
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.16578, 1.17513 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="DefendingArea" type="Area2D" parent="." groups=[
"ram",
]]
position = Vector2( -5.88426, 0.535811 )
scale = Vector2( 2.09642, 1.16207 )
collision_layer = 4
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefendingArea"]
position = Vector2( 2.90075, 0.334702 )
shape = SubResource( 3 )

[node name="AttackingArea" type="Area2D" parent="."]
position = Vector2( -11.5639, 1.89415 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "Attack"
frame = 12
playing = true

[node name="kocbas_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.722
pitch_scale = 1.3

[node name="kocbas_gerinme" type="AudioStreamPlayer2D" parent="." groups=[
"Enemy",
]]
stream = ExtResource( 5 )
volume_db = -2.619
pitch_scale = 1.3
[connection signal="hit" from="." to="." method="_on_Enemy2_hit"]
[connection signal="area_entered" from="AttackingArea" to="." method="_on_AttackingArea_area_entered"]
